src/styles/navigation.css
.navigationOverlay {
    height: 100%;
}

.title-container {
    position: fixed;

    top: 0;
    width: 100%;
    height: 60px;

    /* Flex display is for aligning the title inside */
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    background: white;
    border-bottom: 1px solid #ddd;
}

h1 {
    font-size: x-large;
    font-weight: bold;
}

h3 {
    font-size: large;
    font-weight: bold;
}

.rows {
    margin: 60px;
}

.pageTitle {
    text-align: center;
    cursor: pointer;
}

.upButtonsContainer {
    position: absolute;

    background-color: #e0e0e0;
    height: 60px;
    width: 100%;

    top: -80px;

    padding: 0;

    display: flex;
    flex-direction: column;

    justify-content: center;
    align-items: center;

    cursor: pointer;

    transition: top 100ms;
    z-index: 100; /* Above the page title */
}

.upButtonsContainer.visible {
    position: fixed;
    top: 0px;
}

.sideButtonsContainer {
    position: fixed;

    background-color: #e0e0e0;
    height: 100%;
    width: 60px;

    top: 0;

    padding: 0;

    display: flex;
    flex-direction: column;

    justify-content: space-around;
    align-items: center;
}

@media screen and (max-width: 575px) {
    .button {
        display: none;
    }
}

.prevButton {
    left: -80px;

    transition: left 100ms;

    cursor: pointer;
}

.prevButton.visible {
    left: 0;
}

.forwardButtons {
    width: 60px;

    right: -80px;

    transition: right 100ms;
}

.forwardButtons.visible {
    right: 0;
}

.forwardButton {
    display: flex;

    width: 60px;
    height: 60px;

    align-items: center;
    background-color: #d8d8d8;
    cursor: pointer;
}

.nextButton {
    flex-grow: 2;
    margin-bottom: 4px;
}
.todayButton {
    flex-grow: 0.5;
}

.label {
    width: 100%;
    height: 100%;

    border: 0;
    text-align: center;
}

